--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
-    <title>codesandbox</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <title>Phas Ghost Picker</title>
   </head>
-  <body style="background-color: slategrays;">
+  <body>
     <noscript>
       <strong
         >We're sorry but codesandbox doesn't work properly without JavaScript
