--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <meta name="theme-color" content="#272b30"/>
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Phas Ghost Picker</title>
